# landstalker_editor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.bat  build.sh  configure.bat  configure.sh  default_labels.yaml  dependencies.cmake  index.html  install.bat  install.sh  landstalker_labels.yaml  params.json
landstalker_gfx/: .gitignore  BigTile.cpp  BigTile.h  BigTilesCmp.cpp  BigTilesCmp.h  BitBarrel.cpp  BitBarrel.h  BitBarrelWriter.cpp  BitBarrelWriter.h  Blockmap2D.cpp  Blockmap2D.h  BlockmapIsometric.cpp  BlockmapIsometric.h  CMakeLists.txt  Charset.h  EndCreditString.cpp  EndCreditString.h  HuffmanString.cpp  HuffmanString.h  HuffmanTree.cpp  HuffmanTree.h  HuffmanTrees.cpp  HuffmanTrees.h  ImageBuffer.cpp  ImageBuffer.h  IntroString.cpp  IntroString.h  LSString.cpp  LSTilemapCmp.cpp  LSTilemapCmp.h  LZ77.cpp  LZ77.h  MainFrame.cpp  MainFrame.h  Makefile  Palette.cpp  Palette.h  Rom.h  RomOffsets.h  Sprite.cpp  (+33 more)
landstalker_gfx/Debug/: LZ77.cpp.o.d  MainFrame.cpp.o.d  main.cpp.o.d  wxcrafter.cpp.o.d  wxcrafter_bitmaps.cpp.o.d
landstalker_gfx/Release/: BigTile.cpp.o.d  BigTilesCmp.cpp.o.d  BitBarrel.cpp.o.d  BitBarrelWriter.cpp.o.d  LSTilemapCmp.cpp.o.d  LZ77.cpp.o.d  MainFrame.cpp.o.d  Palette.cpp.o.d  Tile.cpp.o.d  TileAttributes.cpp.o.d  TileBitmap.cpp.o.d  main.cpp.o.d  wxcrafter.cpp.o.d
landstalker_gfx/VC2019/: landstalker_gfx.sln  landstalker_gfx.vcxproj  landstalker_gfx.vcxproj.filters
landstalker_gfx/src/: AnimatedTileset.cpp  AsmFile.cpp  AsmUtils.cpp  AssemblyBuilderDialog.cpp  BigTile.cpp  Block.cpp  Blockmap2D.cpp  BlockmapIsometric.cpp  BlocksetCmp.cpp  BlocksetEditorCtrl.cpp  BlocksetEditorFrame.cpp  ChestDialog.cpp  Chests.cpp  DataManager.cpp  DataTypes.cpp  DataViewCtrlPaletteRenderer.cpp  EditorFrame.cpp  EndCreditString.cpp  Entity.cpp  EntityControlFrame.cpp  EntityPropertiesWindow.cpp  EntryPreferences.cpp  FlagDataViewModel.cpp  FlagDialog.cpp  Flags.cpp  GameData.cpp  GraphicsData.cpp  HeightmapEditorCtrl.cpp  HuffmanString.cpp  HuffmanTrees.cpp  ImageBuffer.cpp  ImageList.cpp  IntroString.cpp  LSString.cpp  LSTilemapCmp.cpp  LZ77.cpp  LayerControlFrame.cpp  MainFrame.cpp  Map2DEditor.cpp  Map2DEditorFrame.cpp  (+41 more)
src/: AnimatedTileset.cpp  AnimationControlFrame.cpp  AnimationFrameControlFrame.cpp  AsmFile.cpp  AsmUtils.cpp  AssemblyBuilderDialog.cpp  Block.cpp  Blockmap2D.cpp  BlocksetCmp.cpp  BlocksetEditorCtrl.cpp  BlocksetEditorFrame.cpp  CMakeLists.txt  CharacterDialog.cpp  ChestDialog.cpp  Chests.cpp  DataManager.cpp  DataTypes.cpp  DataViewCtrlPaletteModel.cpp  DataViewCtrlPaletteRenderer.cpp  DoorControlFrame.cpp  DoorDataViewModel.cpp  Doors.cpp  EditorFrame.cpp  EndCreditString.cpp  Entity.cpp  EntityControlFrame.cpp  EntityPropertiesWindow.cpp  EntityViewerCtrl.cpp  EntityViewerFrame.cpp  ExecutorThread.cpp  FlagDataViewModel.cpp  FlagDialog.cpp  Flags.cpp  FrameControlFrame.cpp  GameData.cpp  GraphicsData.cpp  HeightmapEditorCtrl.cpp  HuffmanString.cpp  HuffmanTree.cpp  HuffmanTrees.cpp  (+53 more)
src/2d_maps/: CMakeLists.txt  Map2DEditor.cpp  Map2DEditor.h  Map2DEditorFrame.cpp  Map2DEditorFrame.h
src/behaviours/: BehaviourScriptEditorCtrl.cpp  BehaviourScriptEditorCtrl.h  BehaviourScriptEditorFrame.cpp  BehaviourScriptEditorFrame.h  CMakeLists.txt
src/blockset/: BlocksetEditorCtrl.cpp  BlocksetEditorCtrl.h  BlocksetEditorFrame.cpp  BlocksetEditorFrame.h  CMakeLists.txt
src/images/: generate_sources.py
src/include/: AnimationControlFrame.h  AnimationFrameControlFrame.h  AsmFile.h  AsmFile_inl.h  AssemblyBuilderDialog.h  Block.h  Blockmap2D.h  BlockmapIsometric.h  BlocksetCmp.h  BlocksetEditorCtrl.h  BlocksetEditorFrame.h  Charset.h  Chests.h  DataManager.h  DataTypes.h  DataViewCtrlPaletteRenderer.h  DoorControlFrame.h  DoorDataViewModel.h  Doors.h  EditorFrame.h  EndCreditString.h  Entity.h  EntityPropertiesWindow.h  EntityViewerCtrl.h  EntityViewerFrame.h  FlagDataViewModel.h  FlagDialog.h  Flags.h  FrameControlFrame.h  HeightmapEditorCtrl.h  HuffmanString.h  Icons.h  ImageBuffer.h  LSString.h  LZ77.h  LayerControlFrame.h  Literals.h  MainFrame.h  Map2DEditor.h  Map2DEditorFrame.h  (+35 more)
src/main/: BrowserTreeCtrl.cpp  BrowserTreeCtrl.h  CMakeLists.txt  EditorFrame.cpp  EditorFrame.h  Icons.h  ImageBufferWx.cpp  ImageBufferWx.h  ImageList.cpp  Images.h  MainFrame.cpp  MainFrame.h  main.cpp  resource.h
src/misc/: AssemblyBuilderDialog.cpp  AssemblyBuilderDialog.h  CMakeLists.txt  ExecutorThread.cpp  PreferencesDialog.cpp  ResizeableGrid.cpp  SelectionControlFrame.cpp  SelectionControlFrame.h
src/palettes/: CMakeLists.txt  DataViewCtrlPaletteModel.cpp  DataViewCtrlPaletteModel.h  DataViewCtrlPaletteRenderer.cpp  DataViewCtrlPaletteRenderer.h  PaletteEditor.cpp  PaletteEditor.h  PaletteListFrame.cpp  PaletteListFrame.h
src/rooms/: CMakeLists.txt  CharacterDialog.cpp  CharacterDialog.h  ChestDialog.cpp  ChestDialog.h  DoorDataViewModel.cpp  DoorDataViewModel.h  EntityControlFrame.cpp  EntityControlFrame.h  EntityPropertiesWindow.cpp  EntityPropertiesWindow.h  FlagDataViewModel.cpp  FlagDataViewModel.h  FlagDialog.cpp  FlagDialog.h  HeightmapEditorCtrl.cpp  HeightmapEditorCtrl.h  LayerControlFrame.cpp  Map3DEditor.cpp  Map3DEditor.h  RoomErrorDialog.cpp  RoomViewerCtrl.cpp  RoomViewerCtrl.h  RoomViewerFrame.cpp  RoomViewerFrame.h  TileSwapControlFrame.cpp  TileSwapControlFrame.h  TileSwapDataViewModel.cpp  TileSwapDataViewModel.h  TileSwapDialog.cpp  TileSwapDialog.h  WarpControlFrame.cpp  WarpControlFrame.h  WarpPropertyWindow.cpp  WarpPropertyWindow.h
src/script/: CMakeLists.txt  CharacterSfxCtrl.cpp  CharacterSfxCtrl.h  CharacterSfxDataViewModel.cpp  CharacterSfxDataViewModel.h  CharacterSfxFrame.cpp  CharacterSfxFrame.h  DataViewScriptActionEditorControl.cpp  DataViewScriptActionEditorControl.h  DataViewScriptActionRenderer.cpp  DataViewScriptActionRenderer.h  ProgressFlagsCtrl.cpp  ProgressFlagsCtrl.h  ProgressFlagsDataViewModel.cpp  ProgressFlagsDataViewModel.h  ProgressFlagsFrame.cpp  ProgressFlagsFrame.h  ScriptDataViewEditorControl.cpp  ScriptDataViewEditorControl.h  ScriptEditorCtrl.cpp  (+13 more)
(+400 files in other folders)
