CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)

PROJECT(landstalker_gfx VERSION 0.2.0)

ADD_SUBDIRECTORY(landstalker_gfx)

INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "${landstalker_gfx_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${landstalker_gfx_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${landstalker_gfx_VERSION_PATCH}")
INCLUDE(CPack)
